--- a/src/map.yaml
+++ b/src/map.yaml
@@ -1,6 +1,6 @@
-image: map.pgm
+image: /home/null/ros_ws/agv_edu_final/src/map.pgm
 resolution: 0.020000
-origin: [-30.600000, -17.160000, 0.000000]
+origin: [-100.000000, -100.000000, 0.000000]
 negate: 0
 occupied_thresh: 0.65
 free_thresh: 0.196
