--- a/src/agv_tcp_velocity/move_base_config/costmap_common_params.yaml
+++ b/src/agv_tcp_velocity/move_base_config/costmap_common_params.yaml
@@ -9,7 +9,7 @@ transform_tolerance: 1.3
 observation_sources: laser_scan
 
 laser_scan:
-  {sensor_frame: hokuyo_link, 
+  {sensor_frame: laser, 
    data_type: LaserScan, 
    topic: scan, 
    marking: true, 
