--- a/src/agv_tcp_velocity/move_base_config/dwa_local_planner_params.yaml
+++ b/src/agv_tcp_velocity/move_base_config/dwa_local_planner_params.yaml
@@ -1,53 +1,86 @@
-#For full documentation of the parameters in this file, and a list of all the
-#parameters available for DWAPlannerROS, please see
-#http://www.ros.org/wiki/dwa_local_planner
 DWAPlannerROS:
-  acc_lim_th: 3.2
-  acc_lim_x: 1
-  acc_lim_y: 1
 
-  max_vel_x: 0.65
-  min_vel_x: -0.1
+# Robot Configuration Parameters - stdr robot
 
-  max_vel_y: 0.2
-  min_vel_y: -0.1
+  acc_lim_x: 3  # maximum is theoretically 2.0
 
-  max_trans_vel: 0.65
-  min_trans_vel: 0.1
+  acc_lim_y: 0  # diff drive robot
 
-  max_rot_vel: 1.0
-  min_rot_vel: 0.2
+  acc_lim_th: 0.01
 
-  sim_time: 1.7
+ 
+
+  max_trans_vel: 3 #choose slightly less than the base's capability
+
+  min_trans_vel: 0.6 #this is the min trans velocity when there is negligible rotational velocity
+
+ 
+
+  max_vel_x: 3
+
+  min_vel_x: -0.3
+
+  max_vel_y: 0  #diff drive robot,don't need set vel_y
+
+  min_vel_y: 0
+
+ 
+
+  max_rot_vel: 0.2  #choose slightly less than the base's capability
+
+  min_rot_vel: 0.05  #this is the min angular velocity when there is negligible translational velocity
+
+ 
+
+# Goal Tolerance Parameters
+
+  yaw_goal_tolerance: 0.06  # 0.1 rad = 5.7 degree
+
+  xy_goal_tolerance: 0.05
+
+  latch_xy_goal_tolerance: true
+ 
+
+# Forward Simulation Parameters
+
+  sim_time: 2.0    # 1.7
+
   sim_granularity: 0.025
 
-  goal_distance_bias: 32.0
-  path_distance_bias: 24.0
-  occdist_scale: 0.02
+  vx_samples: 20    # default 3
 
-  #Parameters for scoring trajectories
-  #goal_distance_bias: 0.25
-  #path_distance_bias: 0.5
-  #occdist_scale: 0.8
-  #heading_lookahead: 0.3
+  vy_samples: 1    # diff drive robot, there is only one sample
 
-  stop_time_buffer: 0.2
-  oscillation_reset_dist: 0.05
+  vth_samples: 20  # 20
 
-  forward_point_distance: 0.325
+ 
 
-  scaling_speed: 0.25
-  max_scaling_factor: 0.2
+# Trajectory Scoring Parameters
 
-  vx_samples: 50
-  vy_samples: 3
-  vtheta_samples: 20
+  path_distance_bias: 32.0      # 32.0
 
-  sim_period: 0.1
+  goal_distance_bias: 24.0      # 24.0
 
-  xy_goal_tolerance: 0.5
-  yaw_goal_tolerance: 0.2
-  latch_xy_goal_tolerance: false
+  occdist_scale: 0.01     # 0.01
 
-  rot_stopped_vel: 0.01
-  trans_stopped_vel: 0.01
+  forward_point_distance: 0.325 # 0.325
+
+  stop_time_buffer: 0.2         # 0.2
+
+  scaling_speed: 0.20           # 0.25
+
+  max_scaling_factor: 0.2       # 0.2
+
+  publish_cost_grid: false
+
+ 
+
+# Oscillation Prevention Parameters
+
+  oscillation_reset_dist: 0.05  # default 0.05
+
+ 
+
+# Global Plan Parameters
+
+  prune_plan: false
