--- a/src/agv_tcp_velocity/move_base_config/local_costmap_params.yaml
+++ b/src/agv_tcp_velocity/move_base_config/local_costmap_params.yaml
@@ -5,17 +5,17 @@ local_costmap:
   publish_voxel_map: true
   publish_cost_grid: true
   #Set the global and robot frames for the costmap
-  global_frame: map
+  global_frame: odom
   robot_base_frame: base_link
 
   #Set the update and publish frequency of the costmap
-  update_frequency: 10.0
-  publish_frequency: 10.0
+  update_frequency: 4
+  publish_frequency: 4
 
   #We'll configure this costmap to be a rolling window... meaning it is always
   #centered at the robot
 #echo
-  static_map: true
+  static_map: false
 
   rolling_window: true
   width: 6.0
@@ -23,15 +23,3 @@ local_costmap:
   resolution: 0.025
   origin_x: 0.0
   origin_y: 0.0
-
-  # amigo
-  obstacle_layer: {
-    combination_method: 1,
-    enabled: true,
-    laser_scan: {clearing: true, data_type: LaserScan, marking: true, sensor_frame: hokuyo_link,
-  topic: scan},
-    max_obstacle_height: 2.0,
-    observation_sources: laser_scan,
-    obstacle_range: 2.5,
-    raytrace_range: 3.0,
-  }
